# UsingTinyGLTF

./: .gitignore  CMakeLists.txt  CMakeSettings.json  cubes_main.cpp
CopyModels/: CMakeLists.txt  GenerateModelFileList.cmake  models.h.in
cmake/: GLFW3Config.cmake
model/: shader_modern.frag  shader_rubik.frag  shader_rubik.vert  triangle.blend  triangle.blend1  triangle.glb  triangle.gltf
model/SimpleContentShaders/: multiple_objects.frag  offscreen_tex.frag  plain_texture.frag  raymarching.frag  raymarching_base.vert  raymarching_box_minus_beam_lattice.frag  seascape.frag  simple.vert  simple_distance.frag  voronoi.frag
model/scene_graph_example/: scene_graph.gltf
model/textured_cube/: cube_source.blend  textured_cube.gltf
src/: AddProjectHelper.cmake  BallTracker.cpp  BallTracker.h  CMakeLists.txt  Content.cpp  Content.h  LoadGLTFHelper.cmake  content_creation.cpp  content_creation.h  content_drawing.cpp  content_drawing.h  cubes_main.cpp  gl_includes.h  tinygltf_implementation.cpp  utils.cpp  utils.h
src/DistanceShaders/: CMakeLists.txt  distance_shaders_main.cpp
src/DistanceWithImgui/: CMakeLists.txt  distance_with_imgui.cpp  shader_control.cpp  shader_control.h
src/Imgui/: CMakeLists.txt
src/RubiksCube/: CMakeLists.txt  rubiks_cube_main.cpp
src/STB/: CMakeLists.txt
src/ShaderToy/: CMakeLists.txt  shader_toy.cpp
src/ShaderUtils/: CMakeLists.txt  shader_control.cpp
src/SimpleContent/: CMakeLists.txt  SimpleContent.cpp  SimpleContent.h  SimpleContentFactory.cpp  SimpleContentFactory.h  simple_content_main.cpp
src/SimpleContent/shaders/: simple.frag  simple.vert  simple_circle.frag  simple_distance.frag
src/Tetrahedron/: CMakeLists.txt  cubes_main.cpp
src/TinyGltfTools/: BallTracker.cpp  BallTracker.h  CMakeLists.txt  Content.cpp  Content.h  ContentUtils.cpp  ContentUtils.h  GLFWUtils.cpp  GLFWUtils.h  GLMUtils.cpp  GLMUtils.h  TransformUtils.cpp  TransformUtils.h  TraverseContent.cpp  TraverseContent.h  content_drawing.cpp  content_drawing.h  get_mesh_data.cpp  get_mesh_data.h  utils.cpp  utils.h
src/UseSceneGraph/: CMakeLists.txt  use_scene_graph_main.cpp
src/UseSceneGraphModern/: CMakeLists.txt  Handlers.cpp  Handlers.h  NodeVisitors.cpp  NodeVisitors.h  use_scene_graph_modern_main.cpp
