cmake_minimum_required(VERSION 3.20)

include("LoadGLTFHelper.cmake")
include("AddProjectHelper.cmake")

set(CMAKE_CXX_STANDARD 20)
add_compile_definitions(PROJECT_INCLUDE_DIR=${PROJECT_INCLUDE_DIR})
add_compile_options("/Zc:__cplusplus")
include_directories([=[C:\Apps\tinygltf-release]=])

add_subdirectory(STB)
add_subdirectory(Imgui)
add_subdirectory(ShaderUtils)
add_subdirectory(SimpleContent)
add_subdirectory(TinyGltfTools)
add_subdirectory(UseSceneGraph)
add_subdirectory(Tetrahedron)
add_subdirectory(UseSceneGraphModern)
add_subdirectory(RubiksCube)
add_subdirectory(DistanceShaders)
add_subdirectory(DistanceWithImgui)
add_subdirectory(ShaderToy)
